Added alt text to images

--- a/src/data/news/2025-01-neural-uprising-cover-reveal.mdx
+++ b/src/data/news/2025-01-neural-uprising-cover-reveal.mdx
@@ -3,7 +3,8 @@ title: "Cover Reveal: The Neural Uprising"
 description: "See the stunning cover art for my upcoming sci-fi thriller launching March 2025!"
 publishDate: 2025-01-15
 category: "releases"
-image: "/images/news/neural-uprising-cover-reveal.jpg"
+image: "/covers/neural-uprising.webp"
+imageAlt: "The Neural Uprising book cover featuring neural network patterns in electric blue against a dark fragmented cityscape"
 ---
 
 I'm thrilled to finally share the cover for **The Neural Uprising**, the first book in The Digital Conscience Trilogy!
