Added ARIA labels

--- a/src/data/news/mdx-feature-test.mdx
+++ b/src/data/news/mdx-feature-test.mdx
@@ -13,7 +13,8 @@ This is a comprehensive test post to verify that all MDX features are rendering 
 
 ### All Heading Levels
 
-# Heading Level 1
+Note: h1 is reserved for the page title. Below are examples of h2 through h6:
+
 ## Heading Level 2
 ### Heading Level 3
 #### Heading Level 4
