Added icon improvements

--- a/src/data/books/fracture-engine.mdx
+++ b/src/data/books/fracture-engine.mdx
@@ -7,7 +7,7 @@ longDescription: |
   When routine maintenance on a Fracture Engine reveals evidence of sabotage, the squad uncovers a conspiracy that threatens to accelerate the convergence of all layers—an event that would annihilate billions across multiple realities. As they hunt for answers across parallel worlds where physics itself changes, they must navigate not only hostile environments but also the political factions fighting for control of humanity's fate.
 
   From the industrial Forge Worlds to the bio-engineered paradises of the Green Veil, from post-apocalyptic Ashen Realms to the nightmare physics of the Deep Fracture, Fracture Engine combines military sci-fi action with cosmic-scale world-building and the intimate character dynamics of a squad learning to trust each other across the boundaries of reality itself.
-coverImage: "/covers/fracture-engine.svg"
+coverImage: "../../assets/covers/fracture-engine.svg"
 publishDate: 2025-06-15
 status: "upcoming"
 series: "The Fracture Engines"
