--- a/src/data/books/mdx-test-book.mdx
+++ b/src/data/books/mdx-test-book.mdx
@@ -4,7 +4,7 @@ description: "A test book to verify MDX rendering in book pages with all markdow
 longDescription: |
   This is a comprehensive test book designed to verify that all MDX features render correctly
   in the book layout. It includes code blocks, images, links, tables, and more.
-coverImage: "/covers/fracture-engine.svg"
+coverImage: "../../assets/covers/fracture-engine.svg"
 publishDate: 2025-11-14
 status: "draft"
 series: "Test Series"
