Added LCP optimization

--- a/playwright-report/data/87d8e8677828f693707b147fe775e435f6b54b52.md
+++ b/playwright-report/data/87d8e8677828f693707b147fe775e435f6b54b52.md
@@ -171,9 +171,11 @@
       - img [ref=e213]
       - generic: Inspect
     - button "Audit" [ref=e215]:
-      - img [ref=e217]
+      - generic [ref=e216]:
+        - img [ref=e217]
+        - img [ref=e220]
       - generic: Audit
-    - button "Settings" [ref=e220]:
-      - img [ref=e222]
+    - button "Settings" [ref=e223]:
+      - img [ref=e225]
       - generic: Settings
 ```
