--- a/playwright-report/data/dc8e1aae5649ff2184d3b5a626df865049c0b561.md
+++ b/playwright-report/data/dc8e1aae5649ff2184d3b5a626df865049c0b561.md
@@ -1,7 +1,7 @@
 # Page snapshot
 
 ```yaml
-- generic [ref=e1]:
+- generic [active] [ref=e1]:
   - banner [ref=e2]:
     - link "Skip to content" [ref=e3] [cursor=pointer]:
       - /url: "#main-content"
@@ -25,7 +25,7 @@
               - img [ref=e17]
               - generic [ref=e22]: RSS Feed
           - listitem [ref=e23]:
-            - button "light" [active] [ref=e24] [cursor=pointer]:
+            - button "light" [ref=e24] [cursor=pointer]:
               - img [ref=e25]
               - img
     - separator [ref=e29]
@@ -163,17 +163,4 @@
         - generic [ref=e199]: Copyright © 2025 Cache McClure
         - generic [ref=e200]: "|"
         - generic [ref=e201]: All rights reserved.
-  - generic [ref=e204]:
-    - button "Menu" [ref=e205]:
-      - img [ref=e207]
-      - generic: Menu
-    - button "Inspect" [ref=e211]:
-      - img [ref=e213]
-      - generic: Inspect
-    - button "Audit" [ref=e215]:
-      - img [ref=e217]
-      - generic: Audit
-    - button "Settings" [ref=e220]:
-      - img [ref=e222]
-      - generic: Settings
 ```
